Create AI glam marketing landing

--- a/index.html
+++ b/index.html
@@ -3,228 +3,195 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cloudflare Landing — Deep Marketing</title>
+  <title>AI Glam School — Маркетинг будущего</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Manrope:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header class="hero" id="hero">
-    <div class="container hero__content">
-      <div class="hero__text">
-        <p class="eyebrow">Deep Marketing x Cloudflare</p>
-        <h1>Запускайте лендинги быстрее на инфраструктуре Cloudflare</h1>
-        <p class="lead">
-          Создаём молниеносные страницы, которые масштабируются без боли. Встроенные сети Cloudflare CDN,
-          автоматизация деплоя и аналитика для роста конверсии.
-        </p>
-        <div class="hero__actions">
-          <a class="btn btn--primary" href="#contact">Запросить демо</a>
-          <a class="btn btn--ghost" href="#benefits">Узнать подробности</a>
-        </div>
-        <ul class="hero__stats">
-          <li><span>50+</span> успешных запусков кампаний</li>
-          <li><span>99,9%</span> доступность за счёт Cloudflare</li>
-          <li><span>2.5x</span> быстрее время загрузки</li>
-        </ul>
+  <div class="parallax" aria-hidden="true">
+    <div class="parallax__layer parallax__layer--gradient" data-depth="0.05"></div>
+    <div class="parallax__layer parallax__layer--grid" data-depth="0.12"></div>
+    <div class="parallax__layer parallax__layer--photo" data-depth="0.2"></div>
+    <div class="parallax__layer parallax__layer--orbs" data-depth="0.35"></div>
+  </div>
+
+  <header class="hero" id="top">
+    <div class="container hero__inner">
+      <div class="hero__badge">🤖 AI Glam School</div>
+      <h1>Смех, блёстки и искусственный интеллект<br>для маркетологов будущего</h1>
+      <p class="hero__lead">Превратите ваши кампании в сияющие воронки продаж. Наши тренинги по AI-маркетингу —
+        как вечеринка в метавселенной, только с результатами. Узнайте, как шутки с нейросетями и продуманная
+        автоматизация увеличивают конверсии на 213%.</p>
+      <div class="hero__cta">
+        <a class="btn btn--primary" href="#registration">Записаться на тренинг</a>
+        <a class="btn btn--ghost" href="#modules">Смотреть программу</a>
       </div>
-      <div class="hero__illustration">
-        <div class="card">
-          <h3>Старт за 7 дней</h3>
-          <p>Готовим кастомный лендинг, настраиваем Cloudflare Pages, интегрируем аналитику.</p>
-          <ul>
-            <li>CI/CD в одну кнопку</li>
-            <li>Безопасность на уровне Enterprise</li>
-            <li>Проактивный мониторинг</li>
-          </ul>
-        </div>
-      </div>
+      <ul class="hero__stats">
+        <li><span>3</span> дня живых воркшопов</li>
+        <li><span>15</span> AI-практик с шаблонами</li>
+        <li><span>∞</span> мемов и идей для контента</li>
+      </ul>
     </div>
   </header>
 
   <main>
-    <section class="section" id="benefits">
+    <section class="section section--split" id="promise">
       <div class="container">
-        <h2>Почему Cloudflare — идеальная платформа для лендингов</h2>
-        <div class="grid grid--3">
-          <article class="feature">
-            <div class="feature__icon" aria-hidden="true">⚡</div>
-            <h3>Глобальная скорость</h3>
-            <p>CDN Cloudflare доставляет ваш контент из ближайшего узла, поэтому страницы открываются мгновенно.</p>
+        <div class="section__content">
+          <h2>Маркетинг с AI — это не скучные отчёты, а шоу с фейерверками данных</h2>
+          <p>Мы докажем, что AI-инструменты могут быть смешными, glam и при этом приносить деньги. Вы научитесь
+            запускать кампании, где чат-боты разговаривают как стендап-комики, а генеративные модели рисуют баннеры
+            быстрее, чем вы успеваете моргнуть.</p>
+          <div class="pill-grid">
+            <span class="pill">Нейросцена продаж</span>
+            <span class="pill">Гиперперсонализация</span>
+            <span class="pill">Мем-инжиниринг</span>
+            <span class="pill">AI-воронки</span>
+          </div>
+        </div>
+        <div class="section__card">
+          <h3>Вы уйдёте с:</h3>
+          <ul>
+            <li>Сценарием кампании «AI комик» для прогрева</li>
+            <li>Готовой автоворонкой, где ИИ шутит и продаёт</li>
+            <li>Стеком инструментов под ваш бюджет</li>
+            <li>Стратегией прогрева через мемы и VR-показы</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--panels" id="modules">
+      <div class="container">
+        <h2>Программа тренинга «Marketing AI Show»</h2>
+        <div class="panels">
+          <article class="panel">
+            <span class="panel__step">День 1</span>
+            <h3>Гламурный бриф: строим AI-персону</h3>
+            <p>Создаём брендового цифрового двойника, который умеет шутить, продавать и танцевать танец продаж в TikTok.</p>
           </article>
-          <article class="feature">
-            <div class="feature__icon" aria-hidden="true">🔒</div>
-            <h3>Встроенная безопасность</h3>
-            <p>Автоматические SSL-сертификаты, WAF и защита от DDoS из коробки.</p>
+          <article class="panel">
+            <span class="panel__step">День 2</span>
+            <h3>Контент с глубиной 4D</h3>
+            <p>Генерим визуал с параллаксом, видео с глубиной и слоганы, которые звучат как саундтрек к кибер-мюзиклу.</p>
           </article>
-          <article class="feature">
-            <div class="feature__icon" aria-hidden="true">📈</div>
-            <h3>Масштабируемость</h3>
-            <p>От первой рекламной кампании до миллионов посетителей без переписывания инфраструктуры.</p>
+          <article class="panel">
+            <span class="panel__step">День 3</span>
+            <h3>Воронки, которые продают, пока вы сияете</h3>
+            <p>Собираем автоматизацию, обучаем AI-ассистента закрывать лидов и устраиваем финальный бал лидогенерации.</p>
           </article>
         </div>
       </div>
     </section>
 
-    <section class="section section--accent" id="process">
-      <div class="container">
-        <h2>Как мы работаем</h2>
-        <ol class="timeline">
-          <li>
-            <span class="timeline__step">1</span>
-            <div>
-              <h3>Аудит и прототип</h3>
-              <p>Разбираем цели кампании, создаём структуру лендинга и дизайн прототип в Figma.</p>
-            </div>
-          </li>
-          <li>
-            <span class="timeline__step">2</span>
-            <div>
-              <h3>Вёрстка и интеграции</h3>
-              <p>Разворачиваем проект на Cloudflare Pages, подключаем формы, CRM и аналитические платформы.</p>
-            </div>
-          </li>
-          <li>
-            <span class="timeline__step">3</span>
-            <div>
-              <h3>Запуск и оптимизация</h3>
-              <p>Настраиваем автоматические деплои, A/B тесты и мониторинг производительности.</p>
-            </div>
-          </li>
-        </ol>
-      </div>
-    </section>
-
-    <section class="section" id="cases">
-      <div class="container">
-        <div class="section__header">
-          <h2>Истории успеха</h2>
-          <a class="link" href="#contact">Смотреть все кейсы →</a>
+    <section class="section section--highlight" id="bonus">
+      <div class="container highlight">
+        <div>
+          <h2>Бонус — «Неоновые скрипты продаж»</h2>
+          <p>Получите набор из 25 готовых AI-подсказок, которые превращают диалоги в шутливые, но убедительные продажи.
+            От интро до закрытия сделки — всё в одном досье.</p>
         </div>
-        <div class="grid grid--2">
-          <article class="case">
-            <h3>FinPay</h3>
-            <p>Новый лендинг для финтех-стартапа на Cloudflare Pages. Конверсия выросла на 36% за первый месяц.</p>
-            <ul>
-              <li>Время загрузки: 0.9 секунды</li>
-              <li>Интеграции: HubSpot, Amplitude</li>
-              <li>Geo-targeted AB тесты</li>
-            </ul>
-          </article>
-          <article class="case">
-            <h3>EduPrime</h3>
-            <p>Запуск масштабной рекламной кампании для edtech. Инфраструктура выдержала 500K уникальных в неделю.</p>
-            <ul>
-              <li>Реактивация посетителей через Workers</li>
-              <li>Сегментация трафика</li>
-              <li>Автогенерация персональных офферов</li>
-            </ul>
-          </article>
+        <div class="highlight__metrics">
+          <div>
+            <span>+213%</span>
+            <p>к конверсии лидов после внедрения AI-мемов</p>
+          </div>
+          <div>
+            <span>4 ч</span>
+            <p>экономии в день за счёт автоматизации</p>
+          </div>
+          <div>
+            <span>97%</span>
+            <p>участников обновили tone of voice бренда</p>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="section section--dark" id="pricing">
+    <section class="section section--testimonials" id="reviews">
       <div class="container">
-        <h2>Тарифы</h2>
-        <div class="grid grid--3">
-          <article class="plan">
-            <h3>Launch</h3>
-            <p class="plan__price">$1 900</p>
-            <p class="plan__subtitle">Для MVP и тестов гипотез</p>
-            <ul>
-              <li>1 лендинг + 3 секции</li>
-              <li>Базовая аналитика</li>
-              <li>Настройка Cloudflare Pages</li>
-            </ul>
-            <a class="btn btn--ghost" href="#contact">Оставить заявку</a>
-          </article>
-          <article class="plan plan--featured">
-            <div class="plan__badge">Хит</div>
-            <h3>Growth</h3>
-            <p class="plan__price">$3 400</p>
-            <p class="plan__subtitle">Для растущих команд</p>
-            <ul>
-              <li>Полноценный лендинг + блог</li>
-              <li>Интеграции с CRM и маркетингом</li>
-              <li>Автотесты и мониторинг</li>
-            </ul>
-            <a class="btn btn--primary" href="#contact">Запросить консультацию</a>
-          </article>
-          <article class="plan">
-            <h3>Scale</h3>
-            <p class="plan__price">$5 900</p>
-            <p class="plan__subtitle">Для enterprise-команд</p>
-            <ul>
-              <li>Мульти-региональные кампании</li>
-              <li>Постоянная оптимизация</li>
-              <li>SLA 24/7 и выделенный менеджер</li>
-            </ul>
-            <a class="btn btn--ghost" href="#contact">Запросить смету</a>
-          </article>
+        <h2>Отзывы выпускников</h2>
+        <div class="testimonials">
+          <figure class="testimonial">
+            <blockquote>
+              «Наш AI-консьерж продаёт курсы, рассказывая анекдоты про большие данные. Клиенты ржут — и покупают».
+            </blockquote>
+            <figcaption>— Лера, основательница студии контента</figcaption>
+          </figure>
+          <figure class="testimonial">
+            <blockquote>
+              «Запустили кампанию в метавселенной. Люди шли за шутками, уходили с подпиской. ROI — космос!»
+            </blockquote>
+            <figcaption>— Тимур, маркетолог edtech-платформы</figcaption>
+          </figure>
+          <figure class="testimonial">
+            <blockquote>
+              «AI-модуль придумал нам мини-стендап. Мы за неделю продали годовой доступ, пока команда тусила».
+            </blockquote>
+            <figcaption>— Аня, CEO SaaS-сервиса</figcaption>
+          </figure>
         </div>
       </div>
     </section>
 
-    <section class="section" id="faq">
+    <section class="section section--faq" id="faq">
       <div class="container">
-        <h2>FAQ</h2>
-        <div class="accordion" role="tablist">
-          <details class="accordion__item" open>
-            <summary>Сколько времени занимает запуск?</summary>
-            <p>Средний запуск занимает 7–10 рабочих дней: прототип, вёрстка, интеграции, QA, деплой на Cloudflare.</p>
+        <h2>Вопросы, которые нам задают</h2>
+        <div class="faq">
+          <details open>
+            <summary>Нужно ли быть гением, чтобы дружить с AI?</summary>
+            <p>Достаточно любить маркетинг и уметь смеяться. Остальное — наши методички, сценарии и поддержка в чате.</p>
           </details>
-          <details class="accordion__item">
-            <summary>Можно ли подключить CMS?</summary>
-            <p>Да, интегрируем headless CMS (Contentful, Sanity, Strapi) с автодеплоем в Cloudflare Pages.</p>
+          <details>
+            <summary>Как проходит обучение?</summary>
+            <p>3 живых дня, записи, шаблоны и совместные сессии. Плюс встреча «AI-карнавал» через неделю.</p>
           </details>
-          <details class="accordion__item">
-            <summary>Чем вы отличаетесь от других агентств?</summary>
-            <p>Объединяем экспертизу в маркетинге и DevOps: делаем страницы, которые реально масштабируются.</p>
+          <details>
+            <summary>Есть ли рассрочка?</summary>
+            <p>Да, предлагаем гибкую оплату и корпоративные пакеты. Напишите нам — подберём идеальный вариант.</p>
           </details>
         </div>
+      </div>
+    </section>
+
+    <section class="section section--cta" id="registration">
+      <div class="container cta">
+        <div class="cta__content">
+          <h2>Готовы включить AI на максимум?</h2>
+          <p>Заполните форму, и мы пришлём расписание ближайшей группы, бонусы и приватную ссылку на afterparty.</p>
+          <div class="cta__links">
+            <a class="btn btn--primary" href="https://t.me/deepmarketing" target="_blank" rel="noreferrer">Перейти в секретный чат</a>
+            <a class="btn btn--ghost" href="#top">Вернуться наверх</a>
+          </div>
+        </div>
+        <form class="form" name="registration" netlify>
+          <label for="name">Имя</label>
+          <input id="name" name="name" type="text" placeholder="Мария" required>
+          <label for="email">Email</label>
+          <input id="email" name="email" type="email" placeholder="shine@brand.ai" required>
+          <label for="goal">Цель</label>
+          <textarea id="goal" name="goal" rows="3" placeholder="Хочу запуск на 1 000 лидов и мемы в подарок"></textarea>
+          <button type="submit" class="btn btn--primary">Зарегистрироваться</button>
+          <p class="form__note">Заполняя форму, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>.</p>
+        </form>
       </div>
     </section>
   </main>
 
-  <footer class="footer" id="contact">
-    <div class="container footer__grid">
-      <div>
-        <h2>Готовы запустить Cloudflare-лендинг?</h2>
-        <p>Оставьте контакты, и мы свяжемся в течение одного рабочего дня.</p>
-      </div>
-      <form class="form" name="contact" netlify>
-        <div class="form__row">
-          <label for="name">Имя</label>
-          <input id="name" name="name" type="text" required placeholder="Екатерина" />
-        </div>
-        <div class="form__row">
-          <label for="email">Email</label>
-          <input id="email" name="email" type="email" required placeholder="team@startup.com" />
-        </div>
-        <div class="form__row">
-          <label for="message">Проект</label>
-          <textarea id="message" name="message" rows="3" placeholder="Кратко опишите задачу"></textarea>
-        </div>
-        <button type="submit" class="btn btn--primary">Отправить</button>
-        <p class="form__note">Нажимая кнопку, вы соглашаетесь с <a href="#">политикой конфиденциальности</a>.</p>
-      </form>
-    </div>
-    <div class="container footer__meta">
-      <p>© 2024 Deep Marketing. Все права защищены.</p>
-      <nav class="footer__nav" aria-label="Footer links">
-        <a href="#hero">Вверх</a>
-        <a href="#process">Процесс</a>
-        <a href="#pricing">Тарифы</a>
-        <a href="mailto:hello@deepmarketing.io">hello@deepmarketing.io</a>
+  <footer class="footer">
+    <div class="container footer__inner">
+      <p>© 2024 AI Glam School. Маркетинг с юмором и искусственным интеллектом.</p>
+      <nav class="footer__nav" aria-label="Меню футера">
+        <a href="#modules">Программа</a>
+        <a href="#reviews">Отзывы</a>
+        <a href="mailto:hello@aiglam.school">hello@aiglam.school</a>
       </nav>
     </div>
   </footer>
 
-  <button class="to-top" type="button" aria-label="Вернуться наверх">
-    ↑
-  </button>
+  <button class="to-top" type="button" aria-label="Вернуться наверх">↑</button>
 
   <script src="script.js"></script>
 </body>
