--- a/index.html
+++ b/index.html
@@ -13,31 +13,28 @@
   <div class="parallax" aria-hidden="true">
     <div class="parallax__layer parallax__layer--gradient" data-depth="0.05"></div>
     <div class="parallax__layer parallax__layer--grid" data-depth="0.12"></div>
-    <div class="parallax__layer parallax__layer--orbs" data-depth="0.28"></div>
-    <div class="parallax__layer parallax__layer--scan" data-depth="0.4"></div>
+    <div class="parallax__layer parallax__layer--photo" data-depth="0.2"></div>
+    <div class="parallax__layer parallax__layer--orbs" data-depth="0.35"></div>
+    <div class="parallax__layer parallax__layer--scan" data-depth="0.45"></div>
   </div>
 
   <header class="hero" id="top">
-    <div class="container">
-      <div class="hero__content">
-        <span class="hero__badge">AI Glam School</span>
-        <h1>Маркетинг будущего в одном кадре</h1>
-        <p class="hero__lead">Минимум шума, максимум нейро-инструментов и остроумия. Мы собираем кампании, где AI
-          сияет и продаёт.</p>
-        <div class="hero__meta">
-          <div class="hero__chip">
-            <span>3 дня</span>
-            Практики и воркшопы
-          </div>
-          <div class="hero__chip">
-            <span>15</span>
-            AI-паттернов
-          </div>
-        </div>
+    <div class="container hero__inner">
+      <div class="hero__card">
+        <div class="hero__badge">🤖 AI Glam School</div>
+        <h1>Смех, блёстки и искусственный интеллект<br>для маркетологов будущего</h1>
+        <p class="hero__lead">Превратите ваши кампании в сияющие воронки продаж. Наши тренинги по AI-маркетингу —
+          как вечеринка в метавселенной, только с результатами. Узнайте, как шутки с нейросетями и продуманная
+          автоматизация увеличивают конверсии на 213%.</p>
         <div class="hero__cta">
-          <a class="btn btn--primary" href="#registration">Записаться</a>
-          <a class="btn btn--ghost" href="#modules">Программа</a>
+          <a class="btn btn--primary" href="#registration">Записаться на тренинг</a>
+          <a class="btn btn--ghost" href="#modules">Смотреть программу</a>
         </div>
+        <ul class="hero__stats">
+          <li><span>3</span> дня живых воркшопов</li>
+          <li><span>15</span> AI-практик с шаблонами</li>
+          <li><span>∞</span> мемов и идей для контента</li>
+        </ul>
       </div>
     </div>
   </header>
